<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Memorial</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="debug">Debug Message</string>
    <string name="showAnswer">Show Answer</string>
    <string name="veryRarely">Very Rarely</string>
    <string name="rarely">Rarely</string>
    <string name="often">Often</string>
    <string name="veryOften">Very Often</string>
    <string name="update">Update</string>
    <string name="search">Search</string>
    <string name="export">Export</string>
    <string name="importFromFile">Import</string>
    <string name="updateFromFile">Update From File</string>
    <string name="wholeWord">Whole Word</string>
    <string name="profile">Profile</string>
    <string name="newProfile">New Profile</string>
    
</resources>
