<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.memorialandroid.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        />
    
    <item android:id="@+id/update"
          android:title="@string/update"/>
    
    <item android:id="@+id/search"
          android:title="@string/search"/>
    
    <item android:id="@+id/export"
          android:title="@string/export"></item>
    
    <item android:id="@+id/importFromFile" 
          android:title="@string/importFromFile"></item>
    
    <item android:id="@+id/profile" 
          android:title="@string/profile"></item>
    
</menu>
