<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.memorialandroid.MainActivity" >

    <TextView
        android:id="@+id/debug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debug" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical|fill_vertical|center_horizontal|fill_horizontal|center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/questionView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Q"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="50sp"
            android:typeface="normal" />

        <TextView
            android:id="@+id/answerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:layout_weight="0.33"
            android:gravity="center"
            android:text="A"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/showAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showAnswer_click"
            android:text="@string/showAnswer" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/veryRarely"
                android:layout_width="0dp"
                android:layout_weight=".30"
                android:layout_height="wrap_content"
                android:onClick="rateClicked"
                android:tag="10"
                android:text="@string/veryRarely" />

            <Button
                android:id="@+id/rarely"
                android:layout_width="0dp"
                android:layout_weight=".25"
                android:layout_height="wrap_content"
                android:onClick="rateClicked"
                android:tag="3"
                android:text="@string/rarely" />

            <Button
                android:id="@+id/often"
                android:layout_width="0dp"
                android:layout_weight=".25"
                android:layout_height="wrap_content"
                android:onClick="rateClicked"
                android:tag="1"
                android:text="@string/often" />

            <Button
                android:id="@+id/veryOften"
                android:layout_width="0dp"
                android:layout_weight=".30"
                android:layout_height="wrap_content"
                android:onClick="rateClicked"
                android:tag="0"
                android:text="@string/veryOften" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>